--- a/hw3/homework3.ipynb
+++ b/hw3/homework3.ipynb
@@ -99,9 +99,9 @@
     "\n",
     "1.4)\n",
     "\n",
-    "$$\\lim_{o \\to \\infty}\\frac{1}{1 + \\exp(-o)} = \\frac{1}{1 + \\frac{1}{e^\\infty}} = 1$$\n",
+    "$$\\lim_{o \\to \\infty}\\log (1 + \\exp(-o)) \\approx \\log (1 + \\frac{1}{e^\\infty}) = 0$$\n",
     "\n",
-    "$$\\lim_{o \\to -\\infty}\\frac{1}{1 + \\exp(-o)} = \\frac{1}{1 + e^\\infty} = 0$$"
+    "$$\\lim_{o \\to \\infty}\\log (1 + \\exp(-o)) \\approx \\log (e^o) = o \\text{ aka } \\infty$$\n"
    ]
   },
   {
