--- a/hw3/homework3.ipynb
+++ b/hw3/homework3.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f3e9d0fdcf8>]"
+       "[<matplotlib.lines.Line2D at 0x7fc3f1307da0>]"
       ]
      },
      "execution_count": 7,
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
     "    return nd.dot(X, r) + c\n",
     "def quadratic(X, r, q, c):\n",
     "    #print(nd.square(X))\n",
-    "    return nd.dot(nd.square(X), q) + nd.dot(nd.square(X), r) + c\n",
+    "    return nd.dot(X ** 2, q) + nd.dot(X, r) + c\n",
     "def squared_loss(y_hat, y):\n",
     "    return (y_hat - y.reshape(y_hat.shape)) ** 2 / 2\n",
     "def sgd(params, lr, batch_size):\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +331,7 @@
       "loss \n",
       "[7.450581e-09]\n",
       "<NDArray 1 @cpu(0)>\n",
-      "Linear: 4.2721305 + 41.56823 * current = voltage\n"
+      "Linear: 4.2735305 + 41.568085 * current = voltage\n"
      ]
     }
    ],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -367,9 +367,9 @@
      "output_type": "stream",
      "text": [
       "loss \n",
-      "[3.702368e+10]\n",
+      "[2.2817403e-08]\n",
       "<NDArray 1 @cpu(0)>\n",
-      "quadratic: 393.00742 + 37194.016 * current + 37194.016 * current^2 = voltage\n"
+      "quadratic: 0.045233063 + 0.45208028 * current + 4.2711186 * current^2 = voltage\n"
      ]
     }
    ],
@@ -381,8 +381,8 @@
     "c.attach_grad()\n",
     "q.attach_grad()\n",
     "\n",
-    "lr = 0.03\n",
-    "num_epochs = 3\n",
+    "lr = 0.0003\n",
+    "num_epochs = 100\n",
     "net = quadratic  \n",
     "loss = squared_loss\n",
     "for epoch in range(num_epochs):\n",
@@ -390,7 +390,7 @@
     "        for i in range(len(current)):\n",
     "            l = loss(net(current[i], r, q, c), voltage[i])\n",
     "    l.backward()\n",
-    "    sgd([r, q, c], lr, len(current))\n",
+    "    sgd([r, c, q], lr, len(current))\n",
     "print(\"loss\", l)\n",
     "print(\"quadratic:\", c[0].asscalar(), \"+\", r[0].asscalar(), \"* current +\",  q[0].asscalar(), \"* current^2\",\"= voltage\")"
    ]
@@ -422,7 +422,7 @@
     "\n",
     "3) Unsure how to answer since incomplete question? Maybe we get 20 more points per character and then \n",
     "\n",
-    "$-\\log_{2}\\frac{1}{2000}*\\frac{1}{4.5}*\\frac{1}{29}= 17.46$ bits\n"
+    "$-\\log_{2}\\frac{1}{2000}*\\frac{1}{4.5}*\\frac{1}{20}= 17.46$ bits\n"
    ]
   },
   {
