--- a/proj/Population Data Country.ipynb
+++ b/proj/Population Data Country.ipynb
@@ -25,9 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1879,7 +1880,7 @@
        "[36252 rows x 29 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +1970,8 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
