--- a/proj/train_keras.ipynb
+++ b/proj/train_keras.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "/home/alex/.local/lib/python3.5/site-packages/requests/__init__.py:83: RequestsDependencyWarning: Old version of cryptography ([1, 2, 3]) may cause slowdown.\n",
+      "  warnings.warn(warning, RequestsDependencyWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import keras.applications\n",
@@ -28,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +54,7 @@
        "'channels_last'"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +74,7 @@
        "<function keras.activations.relu(x, alpha=0.0, max_value=None, threshold=0.0)>"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,15 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/catherinecang/anaconda/envs/gd/lib/python3.6/site-packages/ipykernel_launcher.py:6: UserWarning: Update your `Dense` call to the Keras 2 API: `Dense(activation=\"relu\", units=1)`\n",
-      "  \n"
+      "WARNING:tensorflow:From /home/alex/.local/lib/python3.5/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "102858752/102853048 [==============================] - 14s 0us/step\n"
      ]
     }
    ],
@@ -794,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
